Fix removal-slated APIs and lossy conversions; make jME file log opt-in
- Replace 60 boxed-primitive constructors (removed in a future JDK) with
  valueOf
- Make the 10 implicit lossy compound-assignment casts explicit
  (exact JLS-equivalent rewrites, no behavior change)
- jME LoggingSystem no longer litters every cwd with debug.txt; file
  logging is opt-in via -Djme.log.file

Remaining warnings (intentionally left): 241 this-escape and 34
deprecation (legacy style, cosmetic), 4 finalize overrides in the
vendored openal package that disappears with the Phase 5 LWJGL3 move.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>