@@ -278,7 +278,7 @@ public class PropertiesIO {
             return DEFAULT_FULLSCREEN;
         }
             
-        return new Boolean(prop.getProperty("FULLSCREEN")).booleanValue();        
+        return Boolean.valueOf(prop.getProperty("FULLSCREEN")).booleanValue();        
     }
 
     /**
